--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "3f52f76c",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "7cd26430",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정호석이 걸어가요\n"
+      "정호석이 너무 잘 걸어가요\n"
      ]
     }
    ],
@@ -1437,6 +1437,368 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b623ea3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mymodule안에서의 __name__: {__name__}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_add' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mmymodule안에서의 __name__: \u001b[39m\u001b[38;5;132;01m{__name__}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mmy_add\u001b[49m(\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m))\n\u001b[32m     11\u001b[39m     \u001b[38;5;28mprint\u001b[39m(my_sub(\u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m))\n\u001b[32m     12\u001b[39m     wizard = Character(\u001b[33m\"\u001b[39m\u001b[33m법사\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'my_add' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Character:\n",
+    "    def __init__(self):\n",
+    "        self.name = name\n",
+    "    def speak(self):\n",
+    "        print(f\"저는 {self.name}입니다.\")\n",
+    "\n",
+    "print(\"mymodule안에서의 __name__: {__name__}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(my_add(1, 2))\n",
+    "    print(my_sub(3, 4))\n",
+    "    wizard = Character(\"법사\")\n",
+    "    wizard.speak()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb7cb8fd",
+   "metadata": {},
+   "source": [
+    "### 결제시스템\n",
+    "신용카드, 포인트 결제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2bae078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pay_credit_payment(card_info, amount):\n",
+    "    \"\"\" 신용카드 결제 로직 \"\"\"\n",
+    "    print(f\"{card_info['card_number']}카드로 {amount}원 결제합니다.\")\n",
+    "    print('결제 완료')\n",
+    " \n",
+    "def pay_with_point(point_wallet, amount):\n",
+    "    if point_wallet['balance'] >= amount:\n",
+    "        point_wallet['balance'] -= amount\n",
+    "        print(f\"포인트 {amount}점을 사용해서 결제했습니다.\")\n",
+    "    else:\n",
+    "        print(\"포인트가 부족합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fd0da387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_card = {\n",
+    "    'type':'credit_card',\n",
+    "    'card_number': '1234-5678-xxxx-xxxx',\n",
+    "    'cvc': 123\n",
+    "}\n",
+    " \n",
+    "my_points = {\n",
+    "    'type':\"point_wallet\",\n",
+    "    'balance': 50000\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "974b2562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def payment(payment_method, amount):\n",
+    "    payment_type=payment_method['type']\n",
+    " \n",
+    "    if payment_type == 'credit_card':\n",
+    "        pay_credit_payment(payment_method, amount)\n",
+    "    elif payment_type == 'point_wallet':\n",
+    "        pay_with_point(payment_method, amount)\n",
+    "    else:\n",
+    "        print(\"지원되지 않는 결제방식\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "75a7b746",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234-5678-xxxx-xxxx카드로 2500원 결제합니다.\n",
+      "결제 완료\n",
+      "포인트 10000점을 사용해서 결제했습니다.\n",
+      "포인트가 부족합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "payment(credit_card, 2500)\n",
+    "payment(my_points, 10000)\n",
+    "payment(my_points, 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "42f3d1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PaymentMethod:\n",
+    "    def pay(selt, amount):\n",
+    "        print(f\"{amount}원 결제\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bf5e3ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PaymentMethod:\n",
+    "    def pay(self, amount):\n",
+    "        print(f\"{amount}원 결제\")\n",
+    " \n",
+    "class CreditCard(PaymentMethod):\n",
+    "    def __init__(self, card_number, cvc):\n",
+    "        self.card_number = card_number\n",
+    "        self.cvc = cvc\n",
+    "    def pay(self, amount):\n",
+    "        print(f\"{self.card_number}카드로 {amount}원 결제합니다.\")\n",
+    "        # 서버 결제 요청\n",
+    "        print('결제 완료')\n",
+    "class PointWallet(PaymentMethod):\n",
+    "    def __init__(self, balance):\n",
+    "        self.balance = balance\n",
+    "    def pay(self, amount):\n",
+    "        if self.balance >= amount:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"포인트 {amount}점을 사용해서 결제했습니다.\")\n",
+    "        else:\n",
+    "            print(\"포인트가 부족합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "83e73bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_payment(payment_method, amount):\n",
+    "    payment_method.pay(amount)\n",
+    "\n",
+    "card_obj = CreditCard(\"3333-3333-xxxx\", 333)\n",
+    "point_obj = PointWallet(50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e4dab675",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3333-3333-xxxx카드로 1000원 결제합니다.\n",
+      "결제 완료\n",
+      "포인트 10000점을 사용해서 결제했습니다.\n",
+      "포인트가 부족합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_payment(card_obj, 1000)\n",
+    "process_payment(point_obj, 10000)\n",
+    "process_payment(point_obj, 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693daac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "파이썬 터들이란?\n",
+    "\n",
+    "파이썬에서 사용할 수 있는 그래픽 모듈\n",
+    "LOGO 언어의 그래픽 라이브러리\n",
+    "터틀(거북이) 모양의 커서가 지나간 흔적을 이용해 화면에 선을 그림\n",
+    "그래픽 환경에서만 작동\n",
+    "\n",
+    "https://docs.python.org/ko/3.10/library/turtle.html (참고)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e856d484",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.3.3-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.9 kB ? eta -:--:--\n",
+      "     ------------ ------------------------- 20.5/60.9 kB 330.3 kB/s eta 0:00:01\n",
+      "     ------------------------- ------------ 41.0/60.9 kB 495.5 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.9/60.9 kB 545.1 kB/s eta 0:00:00\n",
+      "Downloading numpy-2.3.3-cp311-cp311-win_amd64.whl (13.1 MB)\n",
+      "   ---------------------------------------- 0.0/13.1 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.1/13.1 MB 3.2 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 0.5/13.1 MB 6.6 MB/s eta 0:00:02\n",
+      "   --- ------------------------------------ 1.1/13.1 MB 8.9 MB/s eta 0:00:02\n",
+      "   ---- ----------------------------------- 1.6/13.1 MB 9.4 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 1.9/13.1 MB 9.5 MB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 2.3/13.1 MB 8.8 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 2.7/13.1 MB 8.6 MB/s eta 0:00:02\n",
+      "   --------- ------------------------------ 3.0/13.1 MB 8.6 MB/s eta 0:00:02\n",
+      "   ---------- ----------------------------- 3.3/13.1 MB 8.4 MB/s eta 0:00:02\n",
+      "   ---------- ----------------------------- 3.5/13.1 MB 7.8 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 3.9/13.1 MB 7.7 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 4.1/13.1 MB 7.5 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 4.3/13.1 MB 7.2 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 4.6/13.1 MB 7.3 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 4.9/13.1 MB 7.3 MB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 5.2/13.1 MB 7.2 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 5.4/13.1 MB 7.0 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 5.7/13.1 MB 6.9 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 5.9/13.1 MB 6.9 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 6.2/13.1 MB 6.8 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 6.4/13.1 MB 6.7 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 6.7/13.1 MB 6.7 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 7.1/13.1 MB 6.7 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 7.4/13.1 MB 6.8 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 7.8/13.1 MB 6.9 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 8.1/13.1 MB 6.9 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 8.4/13.1 MB 6.9 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 8.8/13.1 MB 6.9 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 9.2/13.1 MB 7.0 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 9.6/13.1 MB 7.0 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 10.1/13.1 MB 7.2 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 10.6/13.1 MB 7.4 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 10.9/13.1 MB 7.3 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 11.3/13.1 MB 7.2 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.7/13.1 MB 7.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 12.1/13.1 MB 7.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 12.4/13.1 MB 7.0 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.7/13.1 MB 7.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  13.1/13.1 MB 7.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 13.1/13.1 MB 7.0 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.3.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ba26b3e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "01f1905d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting beautifulsoup4\n",
+      "  Downloading beautifulsoup4-4.13.5-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting soupsieve>1.2 (from beautifulsoup4)\n",
+      "  Downloading soupsieve-2.8-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\el06\\appdata\\roaming\\python\\python311\\site-packages (from beautifulsoup4) (4.15.0)\n",
+      "Downloading beautifulsoup4-4.13.5-py3-none-any.whl (105 kB)\n",
+      "   ---------------------------------------- 0.0/105.1 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/105.1 kB ? eta -:--:--\n",
+      "   ----------- ---------------------------- 30.7/105.1 kB ? eta -:--:--\n",
+      "   ------------------------------- -------- 81.9/105.1 kB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 105.1/105.1 kB 1.5 MB/s eta 0:00:00\n",
+      "Downloading soupsieve-2.8-py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: soupsieve, beautifulsoup4\n",
+      "Successfully installed beautifulsoup4-4.13.5 soupsieve-2.8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "261cb53d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup"
+   ]
   }
  ],
  "metadata": {
