--- a/01_달탐사_미션.ipynb
+++ b/01_달탐사_미션.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. 데이터 준비 및 탐색\n",
+        "2. 데이터 전처리 및 통계분석\n",
+        "3. 분석 및 결과 도출\n",
+        "4. 결과 활용 및 보고서 작성"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -10,12 +20,13 @@
       },
       "outputs": [],
       "source": [
-        "# pandas 라이브러리를 Import하기\n"
+        "# pandas 라이브러리를 Import하기\n",
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "gather": {
           "logged": 1718683920480
@@ -23,12 +34,399 @@
       },
       "outputs": [],
       "source": [
-        "# 데이터 파일을 읽어오기\n"
+        "# 데이터 파일을 읽어오기\n",
+        "rock_samples = pd.read_csv('data/rocksamples.csv')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data\\rocksamples.csv\n",
+        "# copy relative path\n",
+        "# 백슬래시 주의 /로 변경\n",
+        "# \\\\으로 바꿔도 됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2229 entries, 0 to 2228\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column        Non-Null Count  Dtype  \n",
+            "---  ------        --------------  -----  \n",
+            " 0   ID            2229 non-null   int64  \n",
+            " 1   Mission       2229 non-null   object \n",
+            " 2   Type          2229 non-null   object \n",
+            " 3   Subtype       2226 non-null   object \n",
+            " 4   Weight (g)    2229 non-null   float64\n",
+            " 5   Pristine (%)  2229 non-null   float64\n",
+            "dtypes: float64(2), int64(1), object(3)\n",
+            "memory usage: 104.6+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "rock_samples.info() #결측치 3개 # object는 문자열(str)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Weight (g)</th>\n",
+              "      <th>Pristine (%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>2229.000000</td>\n",
+              "      <td>2229.000000</td>\n",
+              "      <td>2229.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>52058.432032</td>\n",
+              "      <td>168.253024</td>\n",
+              "      <td>84.512764</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>26207.651471</td>\n",
+              "      <td>637.286458</td>\n",
+              "      <td>22.057299</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>10001.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>15437.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>80.010000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>65527.000000</td>\n",
+              "      <td>10.200000</td>\n",
+              "      <td>92.300000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>72142.000000</td>\n",
+              "      <td>93.490000</td>\n",
+              "      <td>98.140000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>79537.000000</td>\n",
+              "      <td>11729.000000</td>\n",
+              "      <td>180.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 ID    Weight (g)  Pristine (%)\n",
+              "count   2229.000000   2229.000000   2229.000000\n",
+              "mean   52058.432032    168.253024     84.512764\n",
+              "std    26207.651471    637.286458     22.057299\n",
+              "min    10001.000000      0.000000      0.000000\n",
+              "25%    15437.000000      3.000000     80.010000\n",
+              "50%    65527.000000     10.200000     92.300000\n",
+              "75%    72142.000000     93.490000     98.140000\n",
+              "max    79537.000000  11729.000000    180.000000"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rock_samples.describe()\n",
+        "# count Pristine (%) 2229.000000 확인 필요 값\n",
+        "# max Pristine (%) 180\n",
+        "# std Standard Deviation (표준편차)\n",
+        "# means 평균값"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Mission</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>Subtype</th>\n",
+              "      <th>Weight (g)</th>\n",
+              "      <th>Pristine (%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>10001</td>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>Soil</td>\n",
+              "      <td>Unsieved</td>\n",
+              "      <td>125.8</td>\n",
+              "      <td>88.36</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10002</td>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>Soil</td>\n",
+              "      <td>Unsieved</td>\n",
+              "      <td>5629.0</td>\n",
+              "      <td>93.73</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10003</td>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>Basalt</td>\n",
+              "      <td>Ilmenite</td>\n",
+              "      <td>213.0</td>\n",
+              "      <td>65.56</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10004</td>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>Core</td>\n",
+              "      <td>Unsieved</td>\n",
+              "      <td>44.8</td>\n",
+              "      <td>71.76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10005</td>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>Core</td>\n",
+              "      <td>Unsieved</td>\n",
+              "      <td>53.4</td>\n",
+              "      <td>40.31</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      ID   Mission    Type   Subtype  Weight (g)  Pristine (%)\n",
+              "0  10001  Apollo11    Soil  Unsieved       125.8         88.36\n",
+              "1  10002  Apollo11    Soil  Unsieved      5629.0         93.73\n",
+              "2  10003  Apollo11  Basalt  Ilmenite       213.0         65.56\n",
+              "3  10004  Apollo11    Core  Unsieved        44.8         71.76\n",
+              "4  10005  Apollo11    Core  Unsieved        53.4         40.31"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rock_samples.head() \n",
+        "#tail() #sample(임의값): 랜덤하게 섞어서 보여줌"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Mission</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>Subtype</th>\n",
+              "      <th>Weight (g)</th>\n",
+              "      <th>Pristine (%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2224</th>\n",
+              "      <td>79528</td>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>Breccia</td>\n",
+              "      <td>Regolith</td>\n",
+              "      <td>2.38</td>\n",
+              "      <td>100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2225</th>\n",
+              "      <td>79529</td>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>Breccia</td>\n",
+              "      <td>Regolith</td>\n",
+              "      <td>1.84</td>\n",
+              "      <td>100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2226</th>\n",
+              "      <td>79535</td>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>Breccia</td>\n",
+              "      <td>Regolith</td>\n",
+              "      <td>1.69</td>\n",
+              "      <td>100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2227</th>\n",
+              "      <td>79536</td>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>Breccia</td>\n",
+              "      <td>Regolith</td>\n",
+              "      <td>1.66</td>\n",
+              "      <td>100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2228</th>\n",
+              "      <td>79537</td>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>Breccia</td>\n",
+              "      <td>Regolith</td>\n",
+              "      <td>1.05</td>\n",
+              "      <td>100.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         ID   Mission     Type   Subtype  Weight (g)  Pristine (%)\n",
+              "2224  79528  Apollo17  Breccia  Regolith        2.38         100.0\n",
+              "2225  79529  Apollo17  Breccia  Regolith        1.84         100.0\n",
+              "2226  79535  Apollo17  Breccia  Regolith        1.69         100.0\n",
+              "2227  79536  Apollo17  Breccia  Regolith        1.66         100.0\n",
+              "2228  79537  Apollo17  Breccia  Regolith        1.05         100.0"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rock_samples.tail() "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ID: 샘플 고유 번호 (각 시료를 구분하는 번호)\n",
+        "Mission: 어떤 임무에서 가져온 샘플인지 (여기서는 전부 Apollo 11)\n",
+        "Type: 샘플 종류 (예: Soil = 흙, Basalt = 현무암, Core = 코어 샘플)\n",
+        "Subtype: 세부 분류 (예: Unsieved = 걸러지지 않은, Ilmenite = 특정 광물 종류)\n",
+        "Weight (g): 샘플 무게 (단위: 그램)\n",
+        "Pristine (%): 시료의 보존 상태, 순수도 같은 개념 (100%에 가까울수록 더 원형 그대로 잘 보존됨)\n",
+        "# Pristine (%) 100이 넘는 경우도 있음."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "• Apollo 임무를 통해2,229개 샘플이있다.\n",
+        "    • ID-NASA에서샘플을추적하는데사용되는고유ID\n",
+        "    • Mission– 샘플이 수집된아폴로임무\n",
+        "    • Type- 암석샘플종류\n",
+        "    • Subtype– 구체적인암석샘플종류\n",
+        "    • Weight (g)– 암석 샘플 중량(g) #kg으로 바꿀거임\n",
+        "    • ‘Pristine (%)’- 남아 있는 암석 샘플 백분율 \n",
+        "      (일부샘플이 연구에사용됨)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1718683920653
@@ -167,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "gather": {
           "logged": 1718683920927
@@ -180,18 +578,19 @@
               "2229"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터프레임 행수 확인\n"
+        "#rock_samples 데이터프레임 행수 확인\n",
+        "rock_samples.shape[0]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {
         "gather": {
           "logged": 1718683921069
@@ -204,18 +603,19 @@
               "RangeIndex(start=0, stop=2229, step=1)"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터 프레임의 인덱스 확인\n"
+        "#rock_samples 데이터 프레임의 인덱스 확인\n",
+        "rock_samples.index"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 16,
       "metadata": {
         "gather": {
           "logged": 1718683921221
@@ -228,18 +628,19 @@
               "6"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터프레임 열수 확인\n"
+        "#rock_samples 데이터프레임 열수 확인\n",
+        "rock_samples.shape[1]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "gather": {
           "logged": 1718683921363
@@ -252,18 +653,19 @@
               "(2229, 6)"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터프레임의 모양 확인\n"
+        "#rock_samples 데이터프레임의 모양 확인\n",
+        "rock_samples.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 19,
       "metadata": {
         "gather": {
           "logged": 1718683921516
@@ -276,18 +678,19 @@
               "Index(['ID', 'Mission', 'Type', 'Subtype', 'Weight (g)', 'Pristine (%)'], dtype='object')"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터프레임의 컬럼명 확인\n"
+        "#rock_samples 데이터프레임의 컬럼명 확인\n",
+        "rock_samples.columns"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "metadata": {
         "gather": {
           "logged": 1718683921666
@@ -306,13 +709,14 @@
               "dtype: object"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#rock_samples 데이터프레임 컬럼들의 데이터타입 확인\n"
+        "#rock_samples 데이터프레임 컬럼들의 데이터타입 확인\n",
+        "rock_samples.dtypes"
       ]
     },
     {
@@ -7170,7 +7574,7 @@
       "name": "python3"
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -7184,7 +7588,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.5"
+      "version": "3.11.8"
     },
     "microsoft": {
       "host": {
