--- a/01_달탐사_미션.ipynb
+++ b/01_달탐사_미션.ipynb
@@ -4884,7 +4884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1718683929003
@@ -4988,18 +4988,19 @@
               "4  10005  Apollo11    Core  Unsieved       0.0534         40.31"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 190,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples의 5개 정보 확인하기\n"
+        "# rock_samples의 5개 정보 확인하기\n",
+        "rock_samples.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 192,
       "metadata": {
         "gather": {
           "logged": 1718683929399
@@ -5116,18 +5117,20 @@
               "4        0.021526  "
             ]
           },
-          "execution_count": 46,
+          "execution_count": 192,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples 데이터프레임에 암석샘플의 남은 양을 나타내는 'Remaining (kg)' 컬럼추가\n"
+        "# rock_samples 데이터프레임에 암석샘플의 남은 양을 나타내는 'Remaining (kg)' 컬럼추가\n",
+        "rock_samples['Remaining (kg)'] = rock_samples['Weight (kg)'] * rock_samples['Pristine (%)'] * 0.01\n",
+        "rock_samples.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 193,
       "metadata": {
         "gather": {
           "logged": 1718683929880
@@ -5243,18 +5246,19 @@
               "max    79537.000000    11.729000    180.000000       11.169527"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 193,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples 수치데이터 요약 통계 확인\n"
+        "# rock_samples 수치데이터 요약 통계 확인\n",
+        "rock_samples.describe()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 194,
       "metadata": {
         "gather": {
           "logged": 1718683930026
@@ -5287,18 +5291,19 @@
               "Name: Weight (kg), Length: 2229, dtype: bool"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 194,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples['Weight (kg)']의 모든 값이 0.16kg 이상 인지 확인\n"
+        "# rock_samples['Weight (kg)']의 모든 값이 0.16kg 이상 인지 확인\n",
+        "rock_samples['Weight (kg)'] >= 0.16"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 196,
       "metadata": {
         "gather": {
           "logged": 1718683930391
@@ -5331,18 +5336,19 @@
               "Length: 2229, dtype: bool"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 196,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples['Weight (kg)']이 0.16kg 이상 이면서 rock_samples['Pristine (%)']이 50 이하인지 확인\n"
+        "# rock_samples['Weight (kg)']이 0.16kg 이상 이면서 rock_samples['Pristine (%)']이 50 이하인지 확인\n",
+        "(rock_samples['Weight (kg)'] >= 0.16) & (rock_samples['Pristine (%)'] <= 50)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1718683930536
@@ -5357,116 +5363,40 @@
           }
         }
       },
+      "outputs": [],
+      "source": [
+        "#위의 두 조건을 모두 만족하는 행만 추출해서 low_samples라는 데이터 프레임을 만든다.\n",
+        "low_samples = rock_samples.loc[(rock_samples['Weight (kg)'] >= 0.16) & (rock_samples['Pristine (%)'] <= 50)]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 198,
+      "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>ID</th>\n",
-              "      <th>Mission</th>\n",
-              "      <th>Type</th>\n",
-              "      <th>Subtype</th>\n",
-              "      <th>Weight (kg)</th>\n",
-              "      <th>Pristine (%)</th>\n",
-              "      <th>Remaining (kg)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>10017</td>\n",
-              "      <td>Apollo11</td>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>Ilmenite</td>\n",
-              "      <td>0.973</td>\n",
-              "      <td>43.71</td>\n",
-              "      <td>0.425298</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>10020</td>\n",
-              "      <td>Apollo11</td>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>Ilmenite</td>\n",
-              "      <td>0.425</td>\n",
-              "      <td>27.88</td>\n",
-              "      <td>0.118490</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>10021</td>\n",
-              "      <td>Apollo11</td>\n",
-              "      <td>Breccia</td>\n",
-              "      <td>Regolith</td>\n",
-              "      <td>0.250</td>\n",
-              "      <td>30.21</td>\n",
-              "      <td>0.075525</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>10045</td>\n",
-              "      <td>Apollo11</td>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>Olivine</td>\n",
-              "      <td>0.185</td>\n",
-              "      <td>12.13</td>\n",
-              "      <td>0.022441</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>37</th>\n",
-              "      <td>10057</td>\n",
-              "      <td>Apollo11</td>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>Ilmenite</td>\n",
-              "      <td>0.919</td>\n",
-              "      <td>35.15</td>\n",
-              "      <td>0.323028</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       ID   Mission     Type   Subtype  Weight (kg)  Pristine (%)  \\\n",
-              "11  10017  Apollo11   Basalt  Ilmenite        0.973         43.71   \n",
-              "14  10020  Apollo11   Basalt  Ilmenite        0.425         27.88   \n",
-              "15  10021  Apollo11  Breccia  Regolith        0.250         30.21   \n",
-              "29  10045  Apollo11   Basalt   Olivine        0.185         12.13   \n",
-              "37  10057  Apollo11   Basalt  Ilmenite        0.919         35.15   \n",
-              "\n",
-              "    Remaining (kg)  \n",
-              "11        0.425298  \n",
-              "14        0.118490  \n",
-              "15        0.075525  \n",
-              "29        0.022441  \n",
-              "37        0.323028  "
-            ]
-          },
-          "execution_count": 50,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 27 entries, 11 to 2183\n",
+            "Data columns (total 7 columns):\n",
+            " #   Column          Non-Null Count  Dtype  \n",
+            "---  ------          --------------  -----  \n",
+            " 0   ID              27 non-null     int64  \n",
+            " 1   Mission         27 non-null     object \n",
+            " 2   Type            27 non-null     object \n",
+            " 3   Subtype         27 non-null     object \n",
+            " 4   Weight (kg)     27 non-null     float64\n",
+            " 5   Pristine (%)    27 non-null     float64\n",
+            " 6   Remaining (kg)  27 non-null     float64\n",
+            "dtypes: float64(3), int64(1), object(3)\n",
+            "memory usage: 1.7+ KB\n"
+          ]
         }
       ],
       "source": [
-        "#위의 두 조건을 모두 만족하는 행만 추출해서 low_samples라는 데이터 프레임을 만든다.\n",
-        "\n"
+        "low_samples.info()"
       ]
     },
     {
@@ -5514,7 +5444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 199,
       "metadata": {
         "gather": {
           "logged": 1718683930863
@@ -5536,18 +5466,19 @@
               "Type\n",
               "Basalt     14\n",
               "Breccia     8\n",
-              "Core        1\n",
               "Soil        4\n",
-              "Name: ID, dtype: int64"
+              "Core        1\n",
+              "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 199,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# low_samples 데이터프레임에서 암석유형('Type')별로 개수를 센다.\n"
+        "# low_samples 데이터프레임에서 암석유형('Type')별로 개수를 센다.\n",
+        "low_samples['Type'].value_counts()"
       ]
     },
     {
