--- a/01_달탐사_미션.ipynb
+++ b/01_달탐사_미션.ipynb
@@ -26,6 +26,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 파일 불러오기 주의사항 # copy relative path로 복사 붙여넣기 권장\n",
+        "data\\rocksamples.csv \n",
+        "# 백슬래시 주의 /로 변경\n",
+        "# \\\\으로 바꿔도 됨"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 120,
       "metadata": {
         "gather": {
@@ -36,18 +48,6 @@
       "source": [
         "# 데이터 파일을 읽어오기\n",
         "rock_samples = pd.read_csv('data/rocksamples.csv')\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "data\\rocksamples.csv\n",
-        "# copy relative path\n",
-        "# 백슬래시 주의 /로 변경\n",
-        "# \\\\으로 바꿔도 됨"
       ]
     },
     {
@@ -9009,91 +9009,47 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Type</th>\n",
-              "      <th>Total weight (kg)</th>\n",
-              "      <th>Average weight (kg)</th>\n",
-              "      <th>Number of samples</th>\n",
-              "      <th>Percentage of rocks</th>\n",
-              "      <th>Weight to collect</th>\n",
-              "      <th>Rocks to collect</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>17.42340</td>\n",
-              "      <td>1.244529</td>\n",
-              "      <td>351</td>\n",
-              "      <td>0.258850</td>\n",
-              "      <td>16.467267</td>\n",
-              "      <td>13.231731</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Breccia</td>\n",
-              "      <td>10.11850</td>\n",
-              "      <td>1.264813</td>\n",
-              "      <td>959</td>\n",
-              "      <td>0.707227</td>\n",
-              "      <td>44.991764</td>\n",
-              "      <td>35.571884</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Crustal</td>\n",
-              "      <td>4.74469</td>\n",
-              "      <td>0.103145</td>\n",
-              "      <td>46</td>\n",
-              "      <td>0.033923</td>\n",
-              "      <td>2.158103</td>\n",
-              "      <td>20.922917</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "      Type  Total weight (kg)  Average weight (kg)  Number of samples  \\\n",
-              "0   Basalt           17.42340             1.244529                351   \n",
-              "1  Breccia           10.11850             1.264813                959   \n",
-              "2  Crustal            4.74469             0.103145                 46   \n",
-              "\n",
-              "   Percentage of rocks  Weight to collect  Rocks to collect  \n",
-              "0             0.258850          16.467267         13.231731  \n",
-              "1             0.707227          44.991764         35.571884  \n",
-              "2             0.033923           2.158103         20.922917  "
-            ]
-          },
-          "execution_count": 87,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "KeyError",
+          "evalue": "'Weight to collect'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EL06\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[31mKeyError\u001b[39m: 'Weight to collect'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[235]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 수집할 각각의 암석 개수를 알려준다.\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m needed_samples_overview[\u001b[33m'\u001b[39m\u001b[33mRocks to collect\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mneeded_samples_overview\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mWeight to collect\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m/needed_samples_overview[\u001b[33m'\u001b[39m\u001b[33mAverage weight (kg)\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      3\u001b[39m needed_samples_overview\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EL06\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EL06\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+            "\u001b[31mKeyError\u001b[39m: 'Weight to collect'"
+          ]
         }
       ],
       "source": [
         "# 수집할 각각의 암석 개수를 알려준다.\n",
         "needed_samples_overview['Rocks to collect'] = needed_samples_overview['Weight to collect']/needed_samples_overview['Average weight (kg)']\n",
-        "needed_samples_overview\n"
+        "needed_samples_overview\n",
+        "\n",
+        "# 정리나 내용 캡처 올려야함\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### 그래서 결론은?\n",
+        "아르테미스 미션에서 전체 암석이 실릴 수 있는 평균 무게는\n",
+        "61키로 임으로 각가의 암석을 25프로 70프로 3키로\n",
+        "@@@\n",
+        "@@@\n",
+        "로 확보해 주시면 될 것 같습니다."
       ]
     }
   ],
