--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -250,7 +250,8 @@
    "source": [
     "# 내장 함수를 활용한 예제\n",
     "zip 함수\n",
-    "- zip(*iterable) # 여러 개의 순회 가능한(iterable) 객체를 인자로 받아, 각 객체에서 동일한 인덱스에 위치한 요소들을 튜플로 묶어주는 함수입니다.\n",
+    "- zip(*iterable) # 여러 개의 순회 가능한(iterable) 객체를 인자로 받아, \n",
+    "# 각 객체에서 동일한 인덱스에 위치한 요소들을 튜플로 묶어주는 함수입니다.\n",
     "- 각 iterable의 동일 인덱스의 item들을 묶어서 튜플 쌍으로 반환\n",
     "- 반환되는 객체는 zip 타입이며, iterable의 길이는 달라도 무방"
    ]
@@ -274,8 +275,7 @@
     "g = (19, 0, 277, 132)\n",
     "b = (52, 255, 39, 187)\n",
     "\n",
-    "img = zip(r, g, b)\n",
-    "# img = list(zip(r, g, b))\n",
+    "img = zip(r, g, b) # img = list(zip(r, g, b))\n",
     "print(img)"
    ]
   },
@@ -308,7 +308,7 @@
     "print(img)\n",
     "\n",
     "print(img[0])\n",
-    "print(type(img[0]))\n"
+    "print(type(img[0]))"
    ]
   },
   {
@@ -1270,12 +1270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "be2868ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 클래스 뒤는 대문자로 작성하는 암묵적인(?) 규칙이 있다.\n",
+    "# 클래스 뒤는 대문자로 작성하는 현업자들의 암묵적 규칙이 있다.\n",
     "# 사용자 지정 함수 def __init__는 약속이다.\n",
     "\n",
     "class Person:\n",
