--- a/20250924.ipynb
+++ b/20250924.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "ac604b25",
    "metadata": {},
    "outputs": [
@@ -520,10 +520,10 @@
    ],
    "source": [
     "arr2 = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
-    "\n",
+    "# 2차원 배열(arr2)을 생성. # 3개의 행(row)과 4개의 열(column) 양식.\n",
     "print(arr2)\n",
-    "print(arr2.ndim)\n",
-    "print(arr2.shape)"
+    "print(arr2.ndim) # 배열의 차원 수를 출력.\n",
+    "print(arr2.shape) # 배열의 구조(행, 열)를 튜플로 보여줌."
    ]
   },
   {
