추가 복습 필요

--- a/01_달탐사_미션.ipynb
+++ b/01_달탐사_미션.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "gather": {
           "logged": 1718683920330
@@ -26,9 +26,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "unexpected character after line continuation character (861090750.py, line 2)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdata\\rocksamples.csv\u001b[39m\n         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unexpected character after line continuation character\n"
+          ]
+        }
+      ],
       "source": [
         "# 파일 불러오기 주의사항 # copy relative path로 복사 붙여넣기 권장\n",
         "data\\rocksamples.csv \n",
@@ -38,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 5,
       "metadata": {
         "gather": {
           "logged": 1718683920480
@@ -1039,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1116,9 +1125,10 @@
         }
       ],
       "source": [
-        "# 결측치가 있는 행을 출력\n",
-        "# rock_samples[rock_samples.isnull().any(axis=1)]\n",
-        "rock_samples[rock_samples['Subtype'].isnull()]\n"
+        "# rock_samples[rock_samples.isnull().any(axis=1)] \n",
+        "## 위 코드는 하나 이상의 컬럼에 결측치가 있는 모든 행을 추출\n",
+        "rock_samples[rock_samples['Subtype'].isnull()]\n",
+        "# Subtype 컬럼만 결측치가 있는 행을 출력"
       ]
     },
     {
@@ -1779,12 +1789,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 적용\n",
-        "rock_samples.rename(columns={'Weight (g)':'Weight (kg)'}, inplace = True) "
+        "rock_samples.rename(columns={'Weight (g)':'Weight (kg)'}, inplace = True) \n",
+        "# 원본 데이터프레임을 직접 수정함.\n",
+        "# 별도로 저장하지 않아도 rock_samples의 컬럼명이 바로 바뀜."
       ]
     },
     {
@@ -4449,6 +4460,35 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "gather": {
+          "logged": 1718683928021
+        }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.4963026819923371\n",
+            "0.002848764392685611\n",
+            "0.0014369195019157087\n"
+          ]
+        }
+      ],
+      "source": [
+        "# missions 데이터프레임에서 'Crewed area : Payload', 'Sample : Crewed area', 'Sample : Payload' 의 평균값을 구한다.\n",
+        "crewedArea_payload_ratio = missions['Crewed area : Payload'].mean()\n",
+        "sample_crewedArea_ratio = missions['Sample : Crewed area'].mean()\n",
+        "sample_payload_ratio = missions['Sample : Payload'].mean()\n",
+        "print(crewedArea_payload_ratio)\n",
+        "print(sample_crewedArea_ratio)\n",
+        "print(sample_payload_ratio)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 185,
       "metadata": {},
       "outputs": [
@@ -4515,35 +4555,6 @@
       ],
       "source": [
         "artemis_mission"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "gather": {
-          "logged": 1718683928021
-        }
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0.4963026819923371\n",
-            "0.002848764392685611\n",
-            "0.0014369195019157087\n"
-          ]
-        }
-      ],
-      "source": [
-        "# missions 데이터프레임에서 'Crewed area : Payload', 'Sample : Crewed area', 'Sample : Payload' 의 평균값을 구한다.\n",
-        "crewedArea_payload_ratio = missions['Crewed area : Payload'].mean()\n",
-        "sample_crewedArea_ratio = missions['Sample : Crewed area'].mean()\n",
-        "sample_payload_ratio = missions['Sample : Payload'].mean()\n",
-        "print(crewedArea_payload_ratio)\n",
-        "print(sample_crewedArea_ratio)\n",
-        "print(sample_payload_ratio)\n"
       ]
     },
     {
